--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,7 +1,7 @@
 /* Variables pour l'animation de transition des cartes sur les pages menus */
 
 $prog-card-dur: 1800ms;
-$prog-card-delay: 0ms;
+$prog-card-delay: 200ms;
 
 /* Variables pour l'animation du loading spinner */
 
@@ -15,7 +15,7 @@ $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
 $color-button: linear-gradient($color-secondary, $color-primary);
-$color-background: #fcf9f9;
+$color-background: #f7f6f6;
 
 /* Variable box shadow */
 
