--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -2,11 +2,11 @@
 
 button {
     color: white;
-    font-weight: bolder;
     border-radius: 30px;
     background: $color-button;
     border: transparent;
     padding: 15px 20px;
+    font-size: 16px;
     box-shadow: $size-shadow $color-shadow;
     cursor: pointer;
 
