--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -182,7 +182,7 @@
         width: 100%;
         height: auto;
         text-decoration: none;
-        cursor: pointer;  
+        cursor: pointer; 
     }
 
     &__image {
@@ -216,7 +216,7 @@
         padding: 5px 10px;
 
         h2 {
-            margin-top: 0;
+            margin-top: 8px;
             margin-bottom: 0px;
             color: black;
         }
