--- a/sass/base/_polices.scss
+++ b/sass/base/_polices.scss
@@ -3,7 +3,7 @@
 /* titles : Shrikhand */
 @font-face { 
     font-family: 'Shrikhand';
-    src: url('/police/Shrikhand/Shrikhand-Regular.otf');
+    src: url(https://fonts.gstatic.com/s/shrikhand/v9/a8IbNovtLWfR7T7bMJwrA4KR.woff2) format('woff2');
 }
 
 /* txt : Roboto */
