--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -4,7 +4,12 @@
     height: 250px;
     width: 100%;
     object-fit: cover;
-    z-index: 1;
+    z-index: 4;
+
+    @include responsive-desktop {
+        height: 350px;
+    }
+
 }
 
 .menu {
@@ -12,24 +17,31 @@
     margin-top: -32px;
     display: inline-block;
     background-color: $color-background;
-    padding: 10px 20px;
     padding-bottom: 50px;
+    width: 100%;
+    z-index: -1;
+
     
-    @media screen and (min-width: 393px) {
+    /*@media screen and (min-width: 393px) {
         display: flex;
         flex-direction: column;
         margin-top: 0px;
         border-radius: 0;
-    } 
+    } */
 
     &__title {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    padding: 1rem;
 
     @include responsive-tablet {
         justify-content: space-between;
     }
+    }
+
+    &__body {
+        padding: 1rem;
     }
 
     &__transition {
@@ -59,7 +71,13 @@
     }   
 
     @include responsive-tablet {
-        width: 32%;
+        width: 30%;
+    }
+
+    &--1, &--2, &--3, &--4 {
+        @include responsive-tablet {
+            width: 23%;
+        }
     }
     
     &__description {
