--- a/sass/main.css
+++ b/sass/main.css
@@ -825,12 +825,6 @@ body {
   padding-bottom: 50px;
   width: 100%;
   z-index: -1;
-  /*@media screen and (min-width: 393px) {
-        display: flex;
-        flex-direction: column;
-        margin-top: 0px;
-        border-radius: 0;
-    } */
 }
 
 .menu__title {
@@ -886,6 +880,13 @@ body {
   background-color: white;
   -webkit-animation: transition 1800ms;
           animation: transition 1800ms;
+}
+
+@media screen and (min-width: 768px) {
+  .card {
+    margin: .5rem;
+    width: 31%;
+  }
 }
 
 .card--1 {
@@ -970,18 +971,6 @@ body {
           animation-delay: 2400ms;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
-}
-
-@media screen and (min-width: 768px) {
-  .card {
-    width: 30%;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .card--1, .card--2, .card--3, .card--4 {
-    width: 23%;
-  }
 }
 
 .card__description {
